--- a/homework/HW1_Albert_Joe.Rmd
+++ b/homework/HW1_Albert_Joe.Rmd
@@ -7,7 +7,7 @@ date: "2023-01-30"
 ```{r chunk1, include=FALSE}
 
 #Set Directory
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, include = TRUE)
 knitr::opts_knit$set(root.dir = "/Users/albertjoe33/Documents/UT_Austin/Stat_Learning/ECO395M/homework/")
 
 
@@ -76,7 +76,9 @@ df_cancelled <- df_cancelled %>%
 
 We can first look at the number of flights by airline. 
 Worthy of note:
+
 * WN (Southwest Airlines), AA (American Airlines), and CO (Continental Airlines) have the most flights going in and out of ABIA 
+
 * NW (Northwest Airlines) had very few flights going in or out of ABIA and 0 cancelled flights in this year
 
 <br/>
@@ -106,7 +108,9 @@ We can then look to see which airlines had the highest percentage of cancelled f
 You may ask, what if some airlines were unlucky and had more flights on bad weather days. 
 We can then compare the percentage of flights cancelled by the carrier for reasons other than weather, NAS, or security (in red). 
 So what are the takeaways from the graphs below?
+
 * If you want to minimize the chance of having your flight cancelled, you probably should avoid MQ (Envoy Air). 
+
 * Also worth of note is that although WN (Southwest Airlines) and CO (Continental Airlines) are in the top 3 for number of flights in and out of ABIA,they have relatively lower percentages of cancelled flights due to non-airline related reasons.
 
 <br/>
@@ -177,7 +181,9 @@ flight_number
 ```
 
 From the barplot, we can see the airlines that have the highest percentages of delays, and from the boxplot, we can see the distribution of the delay times. I want to note the following:
+
 1. B6 (Jetblue) has the 4th most number of flights and the highest percentage of flight delays along with relatively higher delay times.
+
 2. Although WN (Southwest) has the most number of flights and high percentages of delays, the delay times for this airline is relatively low. 
 
 <br/>
@@ -187,8 +193,10 @@ From the barplot, we can see the airlines that have the highest percentages of d
 
 ### Summary
 I want to separate the airlines into 2 categories. One category for the airlines with the top three number of flights in and out of ABIA, and a secondary category for all the other airlines. 
+
 #### WN(Southwest Airlines), AA(American Airlines), and CO(Continental Airlines)
 Most likely, passengers will fly WN, AA, or CO. In terms of cancellation, AA has the highest rates of cancellation whereas WN has the lowest rates of cancellation. Especially impressive is that WN manages about 1.5 times more flights than AA and more than 3 times more flights than CO but still has the lowest rates of cancellation. WN has the highest rates of delays but generally have lower delay times than the other 2 airlines. In general, combining the factors of chances of delay and times of delay, there is not an immediately noticeable difference among the 3 airlines. One important aspect to note is that although past performance can give insight, it does not determine what will happen the future as can be seen from the recent mass cancellation of WN due to their scheduling system failing. Although the weather initially impacted their cancellations, the weather caused a major error in their scheduling system that resulted in WN cancelling many other flights, leaving passengers without a flight for days.
+
 #### All Other Airlines
 The cancellation among all other airlines are varied. For instance, MQ has the highest rates of cancellations among all airlines while F9 has the lowest. B6 has the highest rates of delays and relatively high delay times. F9 has a relatively lower rate of cancellations and delay times. The key takeaway is that passengers probably want to avoid MQ when flying among the other airlines. 
 
