--- a/homework/HW2_Albert_Joe.Rmd
+++ b/homework/HW2_Albert_Joe.Rmd
@@ -264,7 +264,11 @@ Overall, the Stepwise Regression Model performed the best in terms of the root m
 
 <br/>
 
-If the tax authority wants the most accurate prediction for property prices, the Stepwise Regression Model clearly outperforms the other models. However, this model is hardly interpretable due to the many interactions among the various attributes of the home. When homeowners protest the value of their home in order to lower property taxes, this model would be extremely difficult to explain to the court authorities determining whether to decrease the value of a home. Consequently, I recommend doing further analysis on and possibly using the hand-selected linear model. The difference between the average RMSE is only approximately 1700, whereas the decrease in property values after a homeowner protests have sometimes been greater than 50,000. I purposely hand-selected a model without transformations and interactions because this model is highly interpretable. In other words, the tax authority can point to specific aspects of the home and state the aggregate affect of the various aspects of the home on the price. However, I would need to do more analysis in regards to the assumptions of linearity, independence, homoscedasticity, and normality. At this point in the analysis, the KNN model has the best interpretability as one can just say we used the following variables and chose the houses that most resembled the homeowner's house in those aspects. In short, use the stepwise model if the only goal is to lower RMSE. Look more into the hand selected model if the goal is to know the affect of each parameter of the house price. Use KNN if the model needs to be interpretable and is needed immediately to evaluate home prices. 
+If the tax authority wants the most accurate prediction for property prices, the Stepwise Regression Model clearly outperforms the other models. However, this model is hardly interpretable due to the many interactions among the various attributes of the home. When homeowners protest the value of their home in order to lower property taxes, this model would be extremely difficult to explain to the court authorities determining whether to decrease the value of a home. Consequently, I recommend doing further analysis on and possibly using the hand-selected linear model. The difference between the average RMSE is only approximately 1700, whereas the decrease in property values after a homeowner protests have sometimes been greater than 50,000. I purposely hand-selected a model without transformations and interactions because this model is highly interpretable. In other words, the tax authority can point to specific aspects of the home and state the aggregate affect of the various aspects of the home on the price. However, I would need to do more analysis in regards to the assumptions of linearity, independence, homoscedasticity, and normality. 
+
+<br/>
+
+At this point in the analysis, the KNN model has the best interpretability as one can just say we used the following variables and chose the houses that most resembled the homeowner's house in those aspects. In short, use the stepwise model if the only goal is to lower RMSE. Look more into the hand selected model if the goal is to know the affect of each parameter of the house price. Use KNN if the model needs to be interpretable and is needed immediately to evaluate home prices. 
 
 <br/>
 
@@ -370,7 +374,7 @@ We can see from the 'history' variable in this logistic regression model that ha
 
 <br/>
 
-Since the bank collects data on all of its customers, I would recommend that the bank use the population or a randomly selected subset of the population to design a predictive model. 
+Since the bank collects data on all of its customers, I would recommend that the bank use the population or a randomly selected subset of the population to design a predictive model. In particular, the bank has an imbalanced classification problem. One way to deal with this is to conduct random over-sampling, random under-sampling, or both. The bank does need to ensure that it is not over over-sampling or over under-sampling in their re-sample. Other techniques could involve using different methods and techniques from the logistic regression model used in this assignment. 
 
 
 ## 3. Children and Hotel Reservations
